--- a/assets/style.css
+++ b/assets/style.css
@@ -564,11 +564,17 @@ nav.nav-tabs {
   margin-right: auto;
 }
 
-/* Make all images responsive and allow them to shrink/grow, but never wider than 100% of their parent */
 img, figure, .figure, .card-img-top {
   max-width: 100%;
   height: auto;
   display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.figure-img-limit {
+  max-width: 800px;   
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
