--- a/assets/style.css
+++ b/assets/style.css
@@ -87,7 +87,7 @@ footer {
 
 .hero-section {
   background: linear-gradient(135deg, #fbc2eb, #a6c1ee);
-  min-height: 30vh;
+  height: 30vh;
   position: relative;
   display: flex;
   align-items: center;
