--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -128,7 +128,10 @@ em, i {
   font-style: italic; }
 
 p {
-  margin: 0 0 2em 0; }
+  margin: 0 0 2em 0; 
+  font-size: 1.1em; /* This line increases the font size */
+
+}
 
 h1, h2, h3, h4, h5, h6 {
   color: #3d4449;
